// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disallow selectors with error that are not used in a JS file and Functional component 1`] = `
{
  "deprecations": [],
  "errored": true,
  "invalidOptionWarnings": [],
  "parseErrors": [],
  "warnings": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 24,
      "line": 22,
      "rule": "plugin/detect-unused-selectors",
      "severity": "error",
      "text": ".not-found is defined but doesn't match any elements in test.js. (plugin/detect-unused-selectors)",
    },
  ],
}
`;

exports[`Disallow selectors with warning that are not used in a JS file and Functional component 1`] = `
{
  "deprecations": [],
  "errored": false,
  "invalidOptionWarnings": [],
  "parseErrors": [],
  "warnings": [
    {
      "column": 1,
      "endColumn": 2,
      "endLine": 24,
      "line": 22,
      "rule": "plugin/detect-unused-selectors",
      "severity": "warning",
      "text": ".not-found is defined but doesn't match any elements in test.js. (plugin/detect-unused-selectors)",
    },
  ],
}
`;
